Se corrige Memory leak al tomar foto y cambiar de Activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
             android:name=".FullScreenImageActivity"
             android:exported="false" />
         <activity
-            android:name=".Adapter"
+            android:name=".AdapterActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
